# pico2-embassy-projects

./: README.md
active-beep/: Cargo.toml
active-beep/src/: main.rs
async-tasks/: Cargo.toml
blocking/byte-oled/: Cargo.toml
blocking/hello-oled/: Cargo.toml
blocking/oled-bmp/: Cargo.toml
blocking/oled-rawimg/: Cargo.toml
button/: Cargo.toml
button/src/: main.rs
buzzer-beep/: Cargo.toml
buzzer-beep/src/: main.rs
buzzer-song/: Cargo.toml
buzzer-song/src/: main.rs  music.rs
external-led/: Cargo.toml
joystick/joystick-adc/: Cargo.toml
lcd/custom-chars/: Cargo.toml
lcd/custom-glyph/: Cargo.toml
lcd/lcd-hello/: Cargo.toml
lcd/multi-glyph/: Cargo.toml
ldr-dracula/: Cargo.toml
ldr-dracula/src/: main.rs
led-dimming/: Cargo.toml
led-dimming/src/: main.rs
max7219/hello-max7219/: Cargo.toml
oled/byte-oled/: Cargo.toml
oled/hello-oled/: Cargo.toml
oled/oled-bmp/: Cargo.toml
oled/oled-rawimg/: Cargo.toml
rfid/blocks-over-serial/: Cargo.toml
rfid/blocks-over-serial/src/: main.rs
rfid/change-key/: Cargo.toml
rfid/memory-dump/: Cargo.toml
rfid/memory-dump-usb/: Cargo.toml
rfid/print-uid/: Cargo.toml
rfid/read-blocks/: Cargo.toml
rfid/rfid-led/: Cargo.toml
rfid/rfid-uid/: Cargo.toml
rfid/uid-over-usb/: Cargo.toml
sdcard/print-over-usb/: Cargo.toml
sdcard/print-over-usb/src/: main.rs
sdcard/read-sdcard/: Cargo.toml
sdcard/write-sdcard/: Cargo.toml
servo-motor/: Cargo.toml
servo-motor/src/: main.rs
temperature-oled/: Cargo.toml
ultrasonic/: Cargo.toml
ultrsonic/: Cargo.toml
usb-serial/: Cargo.toml
(+33 files in other folders)
