[package]
name = "print-over-usb"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0" }

# Embassy
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",

] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",

] }

# To convert Spi bus to SpiDevice
embedded-hal-bus = "0.3.0"

# sd card driver
embedded-sdmmc = "0.9.0"

embassy-usb-logger = "0.5.1"
log = "0.4"
